examples/errors/02_parser_errors.sop
// Soplang Parser Errors
// Demonstrates errors that occur during the parsing phase

bandhig("Soplang Parser Error Examples")
bandhig("============================")
bandhig("Uncomment examples one at a time to see specific errors")
bandhig("")

// Example 1: Missing closing parenthesis
// This will cause an error because the parenthesis is not closed
haddii (5 > 3 {
    bandhig("Missing closing parenthesis")
}

// Example 2: Missing closing brace
// This will cause an error because the brace is not closed
// haddii (5 > 3) {
//     bandhig("Missing closing brace")

// Example 3: Unexpected token
// This will cause an error because the expression is incomplete
// door x = 5 +

// Example 4: Missing argument in function call
// This will cause an error because bandhig() requires an argument
// bandhig()

// Example 5: Invalid statement termination
// This will cause an error because of the extra semicolon (not needed in Soplang)
// door y = 10;

// Example 6: Expected expression
// This will cause an error because an expression is expected after the operator
// door z = 10 *

// Example 7: Invalid if-else structure
// This will cause an error because haddii_kalena requires a preceding haddii
// ugudambeyn {
//     bandhig("Invalid if-else structure")
// }

// Valid code to run when all examples are commented out
// door test = 5 + 5
// bandhig("Only this line should print when all errors are commented out: " + test)
